examples/invalid/duplicate-variable.por
algoritmo "duplicate"

var
    a: inteiro
    a: inteiro

inicio
    escreva(a)
fimalgoritmo
